<resources>
    <string name="app_name">智能制造</string>

    <string name="action_settings">Settings</string>

    <string name="tijiao">提交</string>
    <!--<string name="order_discount_2"><Data><![CDATA[打算使用面值<font color="red">%s</font>元的虎劵]]></Data></string>-->
    <!--<string name="order_remark">注：一旦交易订单成功，虎劵不可返回！</string>-->
    <!--<string name="integral_deducate_1"><Data><![CDATA[共<font color="red">%s</font>个积分，  ]]></Data></string>-->
    <!--<string name="integral_deducate_2"><Data><![CDATA[抵<font color="red">%s</font>元]]></Data></string>-->
    <!--<string name="jifen_deducate"><Data><![CDATA[个积分，可抵<font color="red">%s</font>元]]></Data></string>-->
    <string name="loading">正在加载...</string>

    <!-- MAIN -->
    <string name="xiaoshoufenxi">销售分析</string>
    <string name="first_page">主页</string>
    <string name="shopping_car">已办事项</string>
    <string name="housekeeper">我的</string>
    <string name="qiyeshuo">企业说</string>
    <string name="checkstring">审批</string>

    <!-- xlist -->

    <!-- 商品详细页 -->

    <!-- 充值 -->

    <!-- 有版本更新 -->

    <string name="zijing">资金分析</string>
    <string name="yusuan">预算分析</string>
    <string name="chengben">成本分析</string>
    <string name="caigou">采购分析</string>
    <string name="kucun">库存分析</string>
    <string name="xiaoshou">销售分析</string>
    <string name="zican">资产分析</string>
    <string name="kaohe">考核分析</string>

    <string name="dingdanluru">订单录入</string>
    <string name="dingdanchaxun">订单查询</string>
    <string name="hetongluru">合同录入</string>

    <string name="dingdanguanli">订单管理</string>
    <string name="dingdanzhuangtaigengxin">订单状态更新</string>
    <string name="shouhouguanli">售后管理</string>
<string name="dingdanmingxiluru">订单明细录入</string>
    <string name="zhaopianshangchuan">照片上传</string>


    <string name="gongchangpaichan">工厂排产</string>
    <string name="jichuyanshouqueren">基础验收确认</string>
    <string name="dingdanfahuo">订单发货</string>
    <string name="dingdananzhuang">订单安装</string>
    <string name="yanshoushengqiu">验收申请</string>
    <string name="dingdanyanshou">订单验收</string>
    <string name="yaoshishangjiao">钥匙上交</string>

    <string name="fanhui">返回</string>
    <string name="zhinengzhizao">智能制造</string>

    <string name="qingshuru">请输入...</string>

    <!--订单录入textview -->
    <string name="xuhao">合同编号</string>
    <string name="kehumingchen">客户名称</string>
    <string name="anzhuangdidian">安装地点</string>
    <string name="chanpinmingchen">产品名称</string>
    <string name="yunju">运距</string>
    <string name="hetongbianhao">合同编号</string>
    <string name="yunfei">运费</string>
    <string name="qitafeiyong">其它费用</string>

    <!-- 合同录入的textview字段-->
  <!--  <string name="hetongbianhao"></string>--> <!--合同编号有了 -->
    <string name="hetongxingzhi">合同性质</string>
  <!--  <string name="kehumingchen">客户编号</string>-->  <!--客户名称有了 -->
    <string name="lianxiren">联系人</string>
    <string name="lianxidianhua">联系电话</string>
   <!-- <string name="yunju">客户编号</string>-->
    <!-- <string name="kehubianhao">运费</string>-->
    <!--<string name="qitafeiyong">其他费用</string>-->
    <!--  <string name="kehubianhao">安装地点</string>-->
    <string name="jutididian">具体地点</string>
    <string name="shengfeh">省份</string>
    <string name="yujikaigongriqi">预计开工日期</string>
    <string name="yujijiesuriqi">预计结束日期</string>
    <string name="yujigongqi">预计工期(天)</string>
    <string name="hetongqitayaoqiu">合同及其他要求</string>
    <string name="danjuzhuangtai">单据状态</string>
    <string name="shengchangongchang">生产工厂</string>
    <string name="lururen">录入人</string>
    <string name="lurushijian">录入时间</string>

    <string name="hetongbianhao_is_null">合同编号不能为空</string>
    <string name="hetongxingzhi_is_null">合同性质不能为空</string>
    <string name="kehumingchen_is_null">客户名称不能为空</string>
    <string name="lianxiren_is_null">联系人不能为空</string>
    <string name="lianxidianhua_is_null">联系电话不能为空</string>
    <string name="yunju_is_null">运距不能为空</string>
    <string name="qitafeiyong_is_null">其他费用不能为空</string>
    <string name="anzhuangdidian_is_null">安装地点不能为空</string>
    <string name="jutididian_is_null">具体地点不能为空</string>
    <string name="shengfen_is_null">省份不能为空</string>
    <string name="hetongqitayaoqiu_is_null">合同其他要求不能为空</string>
    <string name="lururen_is_null">录入人不能为空</string>

    <string name="Yujikaigongriqi_is_null">预计开工日期不能为空</string>
    <string name="Yujijiesuriqi_is_null">预计结束日期不能为空</string>

    <string name="Yujijiesuriqi_is_error">预计开工日期不能小于预计结束日期</string>

    <string name="Yujigongqinum">预计工期总数有误</string>

    <string name="dingdanxianshi_tv">订单显示条目</string>

    <!--订单插入有误的字段-->

    <string name="bieshugenzhong_is_null">别墅跟踪号不能为空</string>
    <string name="chanpinbieshuxingxi_is_null">产品别墅信息不能为空</string>
    <string name="chanpinleixing_is_null">产品类型不能为空</string>
    <string name="dinggoushuliang_is_null">订购数量不能为空</string>
    <string name="cailianfei_is_null">材料费不能为空</string>
    <string name="yunshufei_is_null">运输费不能为空</string>
    <string name="heijijine_is_null">合计金额不能为空</string>

    <!--订单的item-->

    <string name="bieshugenzhong">别墅跟踪号</string>
    <string name="canpinleixing">产品类型</string>
    <string name="bieshubianma">别墅编码</string>
    <string name="chanpinbieshumingchen">产品(别墅)名称</string>
    <string name="chanpinguige">产品(别墅)规格型号</string>
    <string name="dinggoushuliang">订购数量</string>
    <string name="cailianfei">材料费</string>
    <string name="yunshufei">运输费</string>
    <string name="heijijine">合计金额</string>
    <string name="shenghairen">审核人</string>
    <string name="shenhaishijian">审核时间</string>

    <string name="chanpinleixing">产品类型</string>

    <string name="chanpinbieshuxingxi">产品信息</string>

    <string name="dangdanyanshou">订单验收</string>

    <string name="dingdanmingxi">订单明细</string>

    <string name="xuanzhetupian">选择图片</string>
    <string name="xuanzhetouxiang">选择头像</string>
    <string name="shangchuan">上传图片</string>
    <string name="pleaseselect">请选择图片</string>

   <!-- 订单detail item-->
    <string name="chanpinbianhao">产品编号</string>
    <string name="anzhuanglianxiren">安装联系人</string>
    <string name="anzhuangrendianhua">安装人电话</string>

    <string name="dingdangenghuanzhuangtai">订单更换状态</string>
    <string name="chakanshangchuantupian">查看上传图片</string>

    <string name="chongmingming">重命名</string>
    <string name="tupianisnull">图片的名字不能为空</string>

    <string name="xiugaiyuming">修改访问域名</string>
    <string name="qingshuruduankouhao">请输入域名</string>
    <string name="qingshurucarmanagement">请输入车次</string>
    <string name="qingshurucontainernum">请输入货柜数</string>
    <string name="qingshuruduanbeizhu">请输入备注....</string>
    <string name="morenyuming">192.168.12.151</string>
    <string name="gongwangyuming">gis.bhome.com.cn</string>

    <string name="version_unknown">version是空的</string>
    
    <string name="shangweikaifa">该功能尚未开发...</string>

    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="menu_capture">扫描</string>


    <!--这里是新增的赋值的 -->
    <!--这里是新增的赋值的 -->
    <!--这里是新增的赋值的 --> <!--这里是新增的赋值的 --> <!--这里是新增的赋值的 -->
    <!--这里是新增的赋值的 -->
    <!--这里是新增的赋值的 -->
    <!--这里是新增的赋值的 -->




    <string name="connect_service_fail">连接服务器失败，请检查网络或稍后重试</string>

    <string name="no_pick">请先选择任务名</string>

    <string name="loading_str_box">提交中</string>

    <string name="comment_str_box">正在提交评论</string>

    <string name="record_failed">录音失败</string>
    <string name="record_failed_no_enough_storage_space">无法访问存储空间,录音失败!</string>
    <string name="hold_to_talk">按住说话</string>
    <string name="loosen_to_cancel">松开取消</string>
    <string name="record_has_canceled">录音已取消</string>
    <string name="voice_can_not_send_because_duration_too_short">录音时间太短，取消发送!</string>

    <string name="act_xt_login_login_name_text">智能制造</string>
    <string name="act_xt_login_btn_login_text">登录</string>
    <string name="act_xt_login_tv_switch_text">切换账号</string>
    <string name="login_problem_txt">忘记密码</string>
    <string name="act_xt_login_148902877808177682_text">密码</string>
    <string name="act_xt_login_password_hint">输入密码</string>

    <string name="account_input">账号</string>
    <string name="act_xt_login_account_hint">输入账号</string>

    <string name="reset">重置</string>
    <string name="sure">确定</string>
    <string name="title_activity_filter_tasks">筛选</string>
    <string name="title_activity_filter_check">审核</string>
    <string name="title_activity_filter_all_project">全部</string>
    <string name="title_activity_filter_section_title">订单状态 :</string>
    <string name="btn_dialog_done">完成</string>
    <string name="btn_dialog_cancel">取消</string>

    <string name="comtasktabletoptitleprojectName">项目名称</string>

    <string name="diaozhuangxuqiufenlu">吊装需求分录</string>
    <string name="saoma">扫码 查询</string>
    <string name="AboutWe">关于我们</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>

    <string name="from">来源: %1$s  %2$s</string>
    <string name="news_detail">新闻内容</string>

    <string name="error_message">对不起！应用程序登录超时。\n\n请点击 重登 按钮进行重新登录。</string>

    <string name="error_title">登录超时</string>

    <string name="action_restart">""</string>

    <string name="Qrcode_result">此二维码扫描无数据</string>
    
    <string name="notificationtitle">我的通知</string>
    <string name="xiugai">修改</string>
    <string name="locpick_nodata">没有数据</string>
    <string name="my_activity">我的</string>
    <string name="yundisk_file">云盘</string>
    <string name="phonebook">book</string>
    <string name="user_is_null">用户为空</string>
    <string name="text_open">打开</string>
    <string name="text_close">关闭</string>
    <string name="passworderror">密码错误</string>
    <string name="pwd_is_null">密码为空</string>
    <string name="is_sure_logout">确定要注销？</string>
    <string name="logout">注销</string>
    <string name="msg_zhushou">消息助手</string>
    <string name="msg_title_from">来自标题:</string>
    <string name="BusinessVersion">企业版</string>
    <string name="look_approval">查看已处理</string>
    <string name="lookup_order_id">查找订单编号</string>
    <string name="add_tag">标签</string>
    <string name="org_toast">当前进入:%s</string>
    <string name="progress_text">当前进度:%d%s</string>
    <string name="action_cancel">取消</string>
    <string name="action_all">全选</string>
    <string name="action_inverse">反选</string>
    <string name="action_info">信息</string>
    <string name="action_more">更多</string>
    <string name="action_download">保存</string>
    <string name="action_link">链接</string>
    <string name="action_delete">删除</string>
    <string name="utf_8">转为UTF-8编码</string>
    <string name="action_save">保存</string>
</resources>
