<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        android:icon="@drawable/ic_menu_ok_white"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_more"
        android:title="@string/action_more"
        android:icon="@drawable/ic_more_action"
        app:showAsAction="withText|always"
        >
        <menu>
            <item
                android:id="@+id/action_download"
                android:icon="@drawable/ic_popup_attachment_download"
                android:title="@string/action_download"
                app:showAsAction="always"
                />
            <item
                android:id="@+id/action_copy"
                android:icon="@drawable/ic_menu_link"
                android:title="@string/action_link"
                app:showAsAction="always"
                />
            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_menu_delete"
                android:title="@string/action_delete"
                app:showAsAction="always"
                />
        </menu>

    </item>

</menu>