<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:gravity="center_horizontal"
        android:background="@color/topfanhuibg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdanxianshi_tv_custom"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:text="@string/dingdanxianshi_tv"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/dingdanxiugai_tv_custom"
            android:textSize="17sp"
            android:gravity="center_vertical"
            android:text="@string/xiugai"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick1"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:textSize="13sp"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:text="@string/bieshugenzhong"
        android:textColor="@color/sc_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_centerInParent="true"
        android:id="@+id/dingdan_bieshugenzhong_tv"
        android:textSize="13sp"
        android:text="11111111"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:textColor="@color/sc_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/canpinleixing"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_canpinleixing_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/bieshubianma"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_bieshubianma_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/chanpinbieshumingchen"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_chanpinbieshumingchen_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/chanpinguige"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_chanpinguige_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/dinggoushuliang"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_dinggoushuliang_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/yunju"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_yunju_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/yunfei"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_yunfei_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/cailianfei"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_cailianfei_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/yunshufei"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_yunshufei_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/qitafeiyong"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_qitafeiyong_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/heijijine"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_heijijine_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/shengchangongchang"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_shengchangongchang_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/danjuzhuangtai"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_danjuzhuangtai_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/lururen"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_lururen_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/lurushijian"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_lurushijian_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/shenghairen"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_shenghairen_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13sp"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/shenhaishijian"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/dingdan_shenhaishijian_tv"
            android:textSize="13sp"
            android:text="11111111"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:textColor="@color/sc_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>