<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_bombbox"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            style="@style/text_18_ffffff"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:gravity="center"
            android:text="@string/title_alert"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/message"
                style="@style/text_16_666666"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:lineSpacingMultiplier="1.5"
                android:minHeight="50.0dip"
                android:paddingBottom="15.0dip"
                android:paddingLeft="20.0dip"
                android:paddingRight="20.0dip"
                android:paddingTop="15.0dip" />

           <!-- android:checkedButton="@+id/view_daterange_history_rb"-->

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical"
                android:id="@+id/timeframe_group">

                <!-- View history using date range Radio Button -->
                <RadioButton
                    android:text="@string/morenyuming"
                    android:textSize="16sp"
                    android:layout_marginLeft="5dp"
                    android:textColor="#000000"
                    android:id="@+id/view_daterange_history_rb"/>

                <!-- View complete history Radio Button -->
                <RadioButton
                    android:text="@string/gongwangyuming"
                    android:textSize="16sp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/view_completehistroy_rb"
                    android:textColor="#000000"
                    />

            </RadioGroup>

            <EditText
                android:id="@+id/edt_domian"
                style="@style/text_16_666666"
                android:minHeight="70.0dip"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:hint="@string/qingshuruduankouhao"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:textColor="@color/material_black95"
                android:textAppearance="@android:style/TextAppearance.Large.Inverse"
                android:textSize="18sp"
                android:maxLength="33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffd0d0d0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:layout_gravity="bottom"
            android:background="@drawable/dialog_bottom_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveButton"
                style="@style/text_15_ffffff_sdw"
                android:layout_width="114.0dip"
                android:layout_height="40.0dip"
                android:background="@drawable/btn_ok_selector"
                android:gravity="center"
                android:text="@string/ok" />

            <Button
                android:id="@+id/negativeButton"
                style="@style/text_15_666666_sdw"
                android:layout_width="114.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="20.0dip"
                android:background="@drawable/btn_cancel_selector"
                android:gravity="center"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>